# TDS_2025_Week_8_Project

./: .gitignore  Dockerfile  HF_README.md  LICENSE  agent-quiz.py  pyproject.toml  test.py
.github/workflows/: hf_push.yml
